--- a/src/main/resources/application-online.properties
+++ b/src/main/resources/application-online.properties
@@ -3,7 +3,7 @@ server.port= 8081
 # 线上环境设置为false，这里用到模拟用户
 isdebug=false
 # 管理员的github_id
-user.admin.githubId=10000000
+user.admin.githubId=a884d640-b480-4aa5-9c6a-aac1b6694b78
 # token有效期
 user.token.expire=3600
 #server.servlet.session.tracking-modes=
@@ -38,9 +38,9 @@ spring.redis.host=127.0.0.1
 #Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
-spring.redis.password=
+spring.redis.password=6s48Q~VomrpF3dubw9aTbs_ix2pRMbhSACYDccPJ
 #Redis数据库索引（默认为0）
-spring.redis.database=1
+spring.redis.database=9046fbba-3f54-406a-b3ed-1ac410dea1ac
 #连接池最大连接数（使用负值表示没有限制）
 spring.redis.jedis.pool.max-active=50
 #连接池最大阻塞等待时间（使用负值表示没有限制）
